fixing wrong jump position for sub-menue

--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -105,6 +105,11 @@
       margin: 10% 0;
     }
     
+    #groceries-location {
+      padding-top: 60px; /* Adjust this value to match your fixed header's height */
+      margin-top: -60px; /* This should be the same value as padding-top but negative */
+    }
+
     .product-img img {
       width: 100%;
       height: 150px;
